# teds-bot-discord

./: .gitignore  bot.py  pyproject.toml
